auth error handled. made responses more expressive. (#7)
